# hoa_email_onboarding

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_INTEGRATION_GUIDE.md  DEPLOYMENT.md  README.md  db.sqlite3  manage.py  pyproject.toml  ruff.toml
hoa_email_onboarding/: asgi.py  settings.py  urls.py  wsgi.py
hoa_management/: admin.py  apps.py  models.py  urls.py  views.py
hoa_management/management/commands/: create_sample_response.py  populate_hoa_data.py
hoa_management/migrations/: 0001_initial.py  0002_emailresponse.py  0003_emailresponse_ai_analysis_result_and_more.py  0004_hoa_demo_email_used.py
hoa_management/templates/hoa_management/: base.html  dashboard.html  email_preview.html  email_response_detail.html  hoa_detail.html  hoa_list.html
services/: email_processor.py  email_service.py  gemini_service.py
