[project]
name = "hoa-email-onboarding"
version = "0.1.0"
description = "HOA Email Onboarding System with Postmark Integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.0.9",
    "postmarker>=1.0",
    "python-decouple>=3.8",
    "faker>=20.1.0",
    "google-genai>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "ruff>=0.1.6",
]
